security: encrypt randomized pre-pack verifier gates via DPT vault