@@ -12,6 +12,7 @@ import com.android.tools.smali.dexlib2.immutable.ImmutableDexFile;
 import com.android.tools.smali.dexlib2.immutable.ImmutableMethod;
 import com.android.tools.smali.dexlib2.immutable.ImmutableMethodImplementation;
 import com.android.tools.smali.dexlib2.immutable.instruction.ImmutableInstruction10x;
+import com.android.tools.smali.dexlib2.immutable.instruction.ImmutableInstruction31i;
 import com.android.tools.smali.dexlib2.immutable.instruction.ImmutableInstruction35c;
 import com.android.tools.smali.dexlib2.immutable.reference.ImmutableMethodReference;
 import com.parallax.parallax.config.ProtectRules;
@@ -19,28 +20,33 @@ import com.parallax.parallax.util.LogUtils;
 
 import java.io.File;
 import java.io.IOException;
+import java.security.SecureRandom;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
 /**
- * Adds a small number of non-destructive shell integrity gates to protected DEX files.
+ * Adds small non-destructive integrity gates to the ORIGINAL app DEX before DPT method
+ * extraction. The synthetic gate bodies are then hollowed by the normal extraction pass,
+ * so their randomized challenge words live in the encrypted/authenticated Parallax.love
+ * vault instead of remaining as a useful plaintext verifier in the final static DEX.
  *
  * Runtime compatibility is the first invariant here: existing <clinit> methods are never
  * rewritten. Rebuilding an existing initializer from raw immutable instructions can leave
  * branch/payload offsets tied to the old layout; inserting even one instruction can then
- * change control flow and make a class fail only when it is first initialized much later
- * (for example when a game screen or engine bridge starts).
+ * change control flow and make a class fail only when it is first initialized much later.
  *
  * We therefore add gates only as brand-new synthetic <clinit> methods on conservative
  * host classes that did not already have one. Existing methods stay bytecode-structurally
- * untouched. The native startup/runtime guards remain the primary integrity layer.
+ * untouched. The shell gate validates the randomized challenge and then enters the native
+ * deterministic signature/integrity check.
  */
 public final class ReflectionClinitInjector {
 
     private static final int MAX_METHODS_PER_DEX = 65535;
     private static final int MAX_SYNTHETIC_GATES_PER_DEX = 8;
+    private static final SecureRandom SECURE_RANDOM = new SecureRandom();
 
     private static final Set<String> SKIPPED_CLASS_TYPES = Set.of(
             "Landroidx/multidex/MultiDex;",
@@ -97,9 +103,9 @@ public final class ReflectionClinitInjector {
         }
 
         ImmutableMethodReference gateRef = new ImmutableMethodReference(
-                jniClassSig,
-                "clinit",
-                Collections.emptyList(),
+                gateClassSig(jniClassSig),
+                "g",
+                List.of("I", "I", "I", "I"),
                 "V"
         );
 
@@ -134,8 +140,26 @@ public final class ReflectionClinitInjector {
 
         DexFile outDex = new ImmutableDexFile(dexFile.getOpcodes(), rewritten);
         DexFileFactory.writeDexFile(outputDex, outDex);
-        LogUtils.info("Parallax DEX integrity gates: existing_clinit_preserved=%d synthetic=%d",
+        LogUtils.info("Parallax encoded pre-pack DEX gates: existing_clinit_preserved=%d synthetic=%d",
                 preservedExistingClinits, syntheticGates);
+    }
+
+    private static String gateClassSig(String jniClassSig) {
+        if (jniClassSig == null) {
+            return "Lcom/parallax/shell/ParallaxGate;";
+        }
+        int slash = jniClassSig.lastIndexOf('/');
+        if (slash <= 0) {
+            return "Lcom/parallax/shell/ParallaxGate;";
+        }
+        return jniClassSig.substring(0, slash + 1) + "ParallaxGate;";
+    }
+
+    private static int gateValue(int a, int b, int c) {
+        int value = Integer.rotateLeft(a ^ 0x5A17D3C9, b & 31);
+        value ^= Integer.rotateRight(b + 0x6D2B79F5, 11);
+        value += c ^ 0x9E3779B9;
+        return value;
     }
 
     private static boolean isSafeSyntheticHost(ClassDef classDef) {
@@ -179,10 +203,19 @@ public final class ReflectionClinitInjector {
 
     private static Method createSyntheticGateClinit(String classType,
                                                      ImmutableMethodReference gateRef) {
+        int a = SECURE_RANDOM.nextInt();
+        int b = SECURE_RANDOM.nextInt();
+        int c = SECURE_RANDOM.nextInt();
+        int expected = gateValue(a, b, c);
+
         List<com.android.tools.smali.dexlib2.iface.instruction.Instruction> code = List.of(
+                new ImmutableInstruction31i(Opcode.CONST, 0, a),
+                new ImmutableInstruction31i(Opcode.CONST, 1, b),
+                new ImmutableInstruction31i(Opcode.CONST, 2, c),
+                new ImmutableInstruction31i(Opcode.CONST, 3, expected),
                 new ImmutableInstruction35c(
                         Opcode.INVOKE_STATIC,
-                        0, 0, 0, 0, 0, 0,
+                        4, 0, 1, 2, 3, 0,
                         gateRef
                 ),
                 new ImmutableInstruction10x(Opcode.RETURN_VOID)
@@ -196,7 +229,7 @@ public final class ReflectionClinitInjector {
                 AccessFlags.STATIC.getValue() | AccessFlags.CONSTRUCTOR.getValue(),
                 null,
                 null,
-                new ImmutableMethodImplementation(0, code, null, null)
+                new ImmutableMethodImplementation(4, code, null, null)
         );
     }
 
